@@ -350,7 +350,7 @@ S. Fabris, G. Fratesi, S. de Gironcoli, R. Gebauer, U. Gerstmann,
 C. Gougoussis, A. Kokalj, M. Lazzeri, L. Martin-Samos, N. Marzari,
 F. Mauri, R. Mazzarello, S. Paolini, A. Pasquarello, L. Paulatto,
 C. Sbraccia, S. Scandolo, G. Sclauzero, A. P. Seitsonen, A. Smogunov,
-P. Umari, R. M. Wentzcovitch, J.Phys.:Condens.Matter, in press,
+P. Umari, R. M. Wentzcovitch, J.Phys.:Condens.Matter 21, 395502 (2009),
 http://arxiv.org/abs/0906.2569
 \end{quote}
 Note the form \qe\ for textual citations of the code.
